# seele

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.en.md  README.md  clippy.toml  rustfmt.toml  taplo.toml
.github/workflows/: build.yml
crates/seele/: Cargo.toml
crates/seele-cgroup/: Cargo.toml
crates/seele-cgroup/src/: lib.rs  systemd.rs  systemd_api.rs
crates/seele-composer/: Cargo.toml
crates/seele-composer/src/: execute.rs  lib.rs  predicate.rs  report.rs  resolve.rs
crates/seele-composer/src/reporter/: javascript.rs  utils.rs
crates/seele-composer/src/tests/: submission_needs_2.yaml  submission_needs_complex.yaml  submission_nested_sequence_2.yaml
crates/seele-composer/src/tests/snapshots/: seele__composer__execute__tests__execute_submission@submission_complex_1.yaml.snap  seele__composer__execute__tests__execute_submission@submission_needs.yaml.snap  seele__composer__execute__tests__execute_submission@submission_needs_2.yaml.snap  seele__composer__execute__tests__execute_submission@submission_nested_sequence_1.yaml.snap  seele__composer__execute__tests__execute_submission@submission_simple.yaml.snap  seele__composer__resolve__tests__resolve_submission@submission_needs.yaml.snap  seele__composer__resolve__tests__resolve_submission@submission_needs_1.yaml.snap  seele__composer__resolve__tests__resolve_submission@submission_needs_2.yaml.snap  seele__composer__resolve__tests__resolve_submission@submission_needs_complex.yaml.snap  seele_composer__execute__tests__execute_submission@submission_complex_1.yaml.snap  seele_composer__execute__tests__execute_submission@submission_needs_1.yaml.snap  seele_composer__execute__tests__execute_submission@submission_needs_2.yaml.snap  seele_composer__execute__tests__execute_submission@submission_needs_complex.yaml.snap  seele_composer__execute__tests__execute_submission@submission_nested_sequence_1.yaml.snap  seele_composer__execute__tests__execute_submission@submission_nested_sequence_2.yaml.snap  seele_composer__execute__tests__execute_submission@submission_nested_sequence_3.yaml.snap  seele_composer__execute__tests__execute_submission@submission_simple.yaml.snap  seele_composer__resolve__tests__resolve_submission@submission_complex_1.yaml.snap  seele_composer__resolve__tests__resolve_submission@submission_needs_1.yaml.snap  seele_composer__resolve__tests__resolve_submission@submission_needs_2.yaml.snap  seele_composer__resolve__tests__resolve_submission@submission_needs_complex.yaml.snap  seele_composer__resolve__tests__resolve_submission@submission_nested_sequence_1.yaml.snap  seele_composer__resolve__tests__resolve_submission@submission_nested_sequence_2.yaml.snap  seele_composer__resolve__tests__resolve_submission@submission_nested_sequence_3.yaml.snap  seele_composer__resolve__tests__resolve_submission@submission_simple.yaml.snap
crates/seele-config/: Cargo.toml
crates/seele-config/src/: action.rs  composer.rs  exchange.rs  healthz.rs  http.rs  lib.rs  path.rs  worker.rs
crates/seele-exchange/: Cargo.toml
crates/seele-exchange/src/: amqp.rs  http.rs  lib.rs
crates/seele-shared/: Cargo.toml
crates/seele-shared/src/: cond.rs  lib.rs  metrics.rs  runner.rs
crates/seele-shared/src/entities/: mod.rs  report.rs  submission.rs
crates/seele-shared/src/entities/action/: add_file.rs  mod.rs  noop.rs
crates/seele-shared/src/entities/action/run_container/: mod.rs  runj.rs
crates/seele-shared/src/entities/action/run_container/run_judge/: compile.rs  mod.rs  run.rs
crates/seele-worker/: Cargo.toml
crates/seele-worker/src/: lib.rs
crates/seele-worker/src/action/: add_file.rs  mod.rs  noop.rs
crates/seele-worker/src/action/run_container/: cache.rs  image.rs  mod.rs  utils.rs
crates/seele-worker/src/action/run_container/run_judge/: compile.rs  run.rs
crates/seele/src/: cgroup.rs  healthz.rs  main.rs  telemetry.rs
docs/: next.config.js  next.config.mjs  package.json  pnpm-lock.yaml  theme.config.jsx
docs/pages/: _meta.en.json  _meta.zh.json  getting-started.en.mdx  getting-started.mdx  getting-started.zh.mdx  index.en.mdx  index.zh.mdx
docs/pages/advanced/: _meta.en.json  _meta.zh.json  architecture.en.mdx  architecture.mdx  architecture.zh.mdx  fairness.en.mdx  fairness.zh.mdx  images.en.mdx  images.zh.mdx  sandbox.en.mdx  sandbox.mdx  sandbox.zh.mdx  telemetry.en.mdx  telemetry.zh.mdx
docs/pages/configurations/: _meta.en.json  _meta.zh.json  composer.en.mdx  composer.mdx  exchange.en.mdx  exchange.mdx  file.en.mdx  file.mdx  worker.en.mdx  worker.zh.mdx
docs/pages/misc/: _meta.en.json  _meta.zh.json  development.en.mdx  development.mdx  development.zh.mdx  naming.en.mdx  naming.mdx  naming.zh.mdx  roadmap.en.mdx  roadmap.mdx  roadmap.zh.mdx
docs/pages/tasks/: _meta.en.json  _meta.zh.json  description.en.mdx  description.zh.mdx  directory.en.mdx  directory.mdx  directory.zh.mdx  embed-and-upload.en.mdx  embed-and-upload.mdx  embed-and-upload.zh.mdx  files.en.mdx  files.mdx  files.zh.mdx  judge.en.mdx  judge.mdx  judge.zh.mdx  order.en.mdx  order.zh.mdx  report.en.mdx  (+12 more)
docs/public/: site.webmanifest
images/diff-scripts/: Dockerfile  diff-loose  diff-strict
runj/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
runj/cgroup/: cgroupfs.go  init.go  systemd.go  utils.go
runj/run/: report.go  run.go  spec.go  utils.go
runj/spec/: config.go  report.go  spec.go
runj/tests/: go.mod  package.json  pnpm-lock.yaml  run.mjs
runj/utils/: utils.go
src/: main.rs  queues.rs
src/cgroup/: mod.rs  systemd.rs  systemd_api.rs  utils.rs
src/composer/: execute.rs  mod.rs  predicate.rs  report.rs  resolve.rs  signal.rs
src/conf/: action.rs  composer.rs  env.rs  exchange.rs  healthz.rs  http.rs  mod.rs  path.rs  telemetry.rs  worker.rs
src/entities/: action.rs  mod.rs  report.rs  submission.rs  submission_report.rs
src/entity/: action.rs  mod.rs
src/exchange/: amqp.rs  http.rs  mod.rs
src/healthz/: mod.rs
src/shared/: cond.rs  cond_group.rs  file_utils.rs  http.rs  image.rs  metrics.rs  mod.rs  oci_image.rs  runner.rs
src/worker/: mod.rs
(+151 files in other folders)
