[package]
name = "seele"
version = "0.5.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true
lto = true

[dependencies]
anyhow = "1.0"
async-recursion = "1.1"
async-trait = "0.1"
base64 = "0.22"
bincode = "2.0.0-rc.3"
bytes = "1.9"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
dbus = "0.9"
duct = "0.13"
either = "1.12"
ellipse = "0.2"
futures-util = "0.3"
http = "1.2"
http-cache = { version = "0.20", default-features = false, features = ["manager-moka"] }
http-cache-reqwest = "0.15"
indexmap = { version = "2.7", features = ["serde"] }
lapin = "2.5"
libcgroups = "0.5"
moka = { version = "0.12", features = ["future", "sync"] }
nano-id = { version = "0.4", features = ["base62"] }
nix = { version = "0.29", features = ["mount", "hostname", "signal"] }
num_cpus = "1"
once_cell = "1"
regex = "1"
quick-js = { version = "0.4", features = ["patched"] }
reqwest = { version = "0.12", features = ["stream", "multipart"] }
reqwest-middleware = "0.4"
ring-channel = "0.12"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
shell-words = "1.1"
systemd = "0.10"
thread_local = "1.1"
tokio = { version = "1", features = ["full"] }
tokio-graceful-shutdown = "0.15"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = "0.3"
triggered = "0.1"
url = { version = "2.5", features = ["serde"] }
uzers = "0.12"

# locked dependencies because of the api changes in the newer versions
tracing-opentelemetry = "=0.18.0"
opentelemetry = { version = "=0.18.0", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "=0.11.0", features = ["metrics"] }
hyper = { version = "0", features = ["server", "stream"] }

[dev-dependencies]
insta = { version = "1.42", features = ["glob", "redactions", "ron"] }
map-macro = "0.3"
rand = { version = "0.8" }
