[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.6.0"

[profile.release]
lto = "thin"
opt-level = 3
strip = true

[workspace.dependencies]
anyhow = "1.0"
async-recursion = "1.1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bytes = "1.9"
chrono = { version = "0.4", features = [ "serde" ] }
config = "0.15"
dbus = "0.9"
duct = "0.13"
either = "1.12"
ellipse = "0.2"
futures-util = "0.3"
http = "1.2"
http-cache = { version = "0.20", default-features = false, features = [
    "manager-moka"
] }
http-cache-reqwest = "0.15"
indexmap = { version = "2.7", features = [ "serde" ] }
insta = { version = "1.42", features = [ "glob", "redactions", "ron" ] }
lapin = "2.5"
libcgroups = "0.5"
map-macro = "0.3"
moka = { version = "0.12", features = [ "future", "sync" ] }
nano-id = { version = "0.4", features = [ "base62" ] }
nix = { version = "0.29", features = [ "hostname", "mount", "signal" ] }
num_cpus = "1"
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
opentelemetry_sdk = { version = "0.27", features = [ "rt-tokio" ] }
quick-js = { version = "0.4", features = [ "patched" ] }
rand = { version = "0.9" }
regex = "1"
reqwest = { version = "0.12", features = [ "multipart", "stream" ] }
reqwest-middleware = "0.4"
ring-channel = "0.12"
rkyv = "0.8"
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_json = { version = "1.0", features = [ "preserve_order" ] }
serde_yaml = "0.9"
sha2 = "0.10"
shell-words = "1.1"
systemd = "0.10"
thread_local = "1.1"
tokio = { version = "1", features = [ "full" ] }
tokio-graceful-shutdown = "0.15"
tokio-util = { version = "0.7", features = [ "io" ] }
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = "0.3"
triggered = "0.1"
url = { version = "2.5", features = [ "serde" ] }
uzers = "0.12"

# local dependencies

seele_cgroup = { path = "crates/seele-cgroup" }
seele_composer = { path = "crates/seele-composer" }
seele_config = { path = "crates/seele-config" }
seele_exchange = { path = "crates/seele-exchange" }
seele_shared = { path = "crates/seele-shared" }
seele_worker = { path = "crates/seele-worker" }
