[package]
edition.workspace = true
name              = "seele_cgroup"
version.workspace = true

[dependencies]
anyhow     = { workspace = true }
dbus       = { workspace = true }
libcgroups = { workspace = true }
tracing    = { workspace = true }

# local dependencies

seele_config = { workspace = true }
seele_shared = { workspace = true }
