[package]
edition.workspace = true
name              = "seele_worker"
version.workspace = true

[dependencies]
anyhow                  = { workspace = true }
base64                  = { workspace = true }
bytes                   = { workspace = true }
chrono                  = { workspace = true }
duct                    = { workspace = true }
futures-util            = { workspace = true }
http-cache              = { workspace = true }
http-cache-reqwest      = { workspace = true }
moka                    = { workspace = true }
nano-id                 = { workspace = true }
nix                     = { workspace = true }
reqwest                 = { workspace = true }
reqwest-middleware      = { workspace = true }
rkyv                    = { workspace = true }
serde                   = { workspace = true }
serde_json              = { workspace = true }
sha2                    = { workspace = true }
thread_local            = { workspace = true }
tokio                   = { workspace = true }
tokio-graceful-shutdown = { workspace = true }
tracing                 = { workspace = true }
triggered               = { workspace = true }

# local dependencies

seele_cgroup = { workspace = true }
seele_config = { workspace = true }
seele_shared = { workspace = true }
